--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,32 @@
 {
-    "name": "hostnet/dead-tool",
-    "description": "Dead Code Identification Toolbox",
-    "license": "EPL-1.0",
-    "require": {
-        "php": ">=5.3",
-        "pear/console_commandline": "*@dev",
-        "pear/pear_exception": "*@dev"
-    },
-    "minimum-stability": "stable",
-    "repositories": [
-        {
-            "type":"composer",
-            "url": "http://packagist.hostnetbv.nl"
-        }
-    ],
-    "authors": [
-        {
-            "name": "Hidde Boomsma",
-            "email": "hboomsma@hostnet.nl"
-        }
-    ],
-    "autoload": {
-        "classmap": ["src/"]
-    },
-    "bin": [ "bin/dead" ]
+	"name" : "hostnet/dead-tool",
+	"description" : "Dead Code Identification Toolbox",
+	"license" : "EPL-1.0",
+	"require" : {
+		"php" : ">=5.3",
+		"pear/console_commandline" : "*@dev",
+		"pear/pear_exception" : "*@dev"
+	},
+	"minimum-stability" : "stable",
+	"repositories" : [{
+			"type" : "composer",
+			"url" : "http://packagist.hostnetbv.nl"
+		}
+	],
+	"authors" : [{
+			"name" : "Hidde Boomsma",
+			"email" : "hboomsma@hostnet.nl"
+		}
+	],
+	"autoload" : {
+		"classmap" : [
+			"src/"
+		]
+	},
+	"bin" : [
+		"bin/dead"
+	],
+	"require-dev" : {
+		"phpunit/phpunit" : "3.7.*"
+	}
 }
