--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name" : "hostnet/dead-tool",
 	"description" : "Dead Code Identification Toolbox",
-	"license" : "EPL-1.0",
+	"license" : "MIT",
 	"require" : {
 		"php" : ">=5.3",
 		"pear/console_commandline" : "*@dev",
