--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "pear/pear_exception":      "*@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0.3"
+        "phpunit/phpunit": "^7.0.3",
+        "hostnet/phpcs-tool": "^5.3"
     },
     "autoload": {
         "classmap": [
