--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,16 @@ cache:
   directories:
     - "$HOME/.composer/cache"
 
-env:
-  - COMPOSER_FLAGS="--prefer-stable --prefer-lowest"
-
-php:
-  - 7.1
-  - 7.2
+matrix:
+  include:
+    - php: 7.1
+      env: COMPOSER_FLAGS="--prefer-stable"
+    - php: 7.2
+      env: COMPOSER_FLAGS="--prefer-stable"
+    - php: 7.1
+      env: COMPOSER_FLAGS="--prefer-lowest"
+    - php: 7.2
+      env: COMPOSER_FLAGS="--prefer-lowest"
 
 install:
  - composer update $COMPOSER_FLAGS --prefer-dist
