--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         "pear/pear_exception":      "*@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0.3",
-        "hostnet/phpcs-tool": "^6.0.1"
+        "hostnet/phpcs-tool": "^6.0.1",
+        "phpunit/phpunit":    "^7.0.3"
     },
     "autoload": {
         "classmap": [
@@ -19,5 +19,10 @@
     },
     "bin": [
         "bin/dead"
-    ]
+    ],
+    "archive": {
+        "exclude": [
+            "/test"
+        ]
+    }
 }
