--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,15 @@ cache:
   directories:
     - "$HOME/.composer/cache"
 
+env:
+  global:
+    - COMPOSER_FLAGS="--prefer-stable"
+
 matrix:
   include:
     - php: 7.1
-      env: COMPOSER_FLAGS="--prefer-stable"
     - php: 7.2
-      env: COMPOSER_FLAGS="--prefer-stable"
+    - php: 7.3
     - php: 7.1
       env: COMPOSER_FLAGS="--prefer-lowest"
     - php: 7.2
