Update phpunit to 8

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,10 +6,8 @@
         </testsuite>
     </testsuites>
     <filter>
-        <blacklist>
-            <directory>./vendor</directory>
-            <directory>./tests</directory>
-            <directory>./caches</directory>
-        </blacklist>
+        <whitelist>
+            <directory>./src</directory>
+        </whitelist>
     </filter>
 </phpunit>
